--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "redux": "^3.6.0"
   },
   "devDependencies": {
+    "editorconfig-checker": "^1.3.3",
+    "husky": "^1.3.1",
+    "lint-staged": "^8.1.2",
     "react-scripts": "0.9.5"
   },
   "scripts": {
@@ -18,5 +21,16 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "src/**/*.{js,css}": [
+      "editorconfig-checker",
+      "prettier --write"
+    ]
   }
 }
