--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
     "redux": "^3.6.0"
   },
   "devDependencies": {
-    "editorconfig-checker": "^1.3.3",
-    "husky": "^1.3.1",
-    "lint-staged": "^8.1.2",
+    "editorconfig-checker": "1.3.3",
+    "husky": "1.3.1",
+    "lint-staged": "8.1.2",
+    "prettier": "1.16.3",
     "react-scripts": "0.9.5"
   },
   "scripts": {
@@ -30,7 +31,7 @@
   "lint-staged": {
     "src/**/*.{js,css}": [
       "editorconfig-checker",
-      "prettier --write"
+      "prettier -c"
     ]
   }
 }
