--- a/package.json
+++ b/package.json
@@ -6,17 +6,22 @@
     "classnames": "^2.2.5",
     "lodash": "^4.17.4",
     "prop-types": "^15.6.2",
-    "react": "^15.5.4",
-    "react-dom": "^15.5.4",
+    "react": "^15.6.2",
+    "react-dom": "^15.6.2",
     "react-redux": "^5.0.4",
     "redux": "^3.6.0"
   },
   "devDependencies": {
     "editorconfig-checker": "1.3.3",
+    "enzyme": "^3.8.0",
+    "enzyme-adapter-react-15": "^1.3.0",
+    "enzyme-to-json": "^3.3.5",
     "husky": "1.3.1",
     "lint-staged": "8.1.2",
     "prettier": "1.16.3",
-    "react-scripts": "0.9.5"
+    "react-scripts": "0.9.5",
+    "react-test-renderer": "^15.6.2",
+    "redux-mock-store": "^1.5.3"
   },
   "scripts": {
     "start": "react-scripts start",
